# report_insights

backend/: README.md  config.py  main.py  pyproject.toml  requirements.txt
backend/analysis/: correlations.py  decomposition.py  key_influencers.py  orchestrator.py  outliers.py  patterns.py  seasonality.py  statistical.py  trends.py
backend/api/routes/: chat.py  quick_insights.py  report_insights.py  upload.py
backend/api/schemas/: requests.py  responses.py
backend/core/: __init__.py  cache.py  csv_parser.py  data_profiler.py  data_understanding.py  logging_config.py
backend/insights/: __init__.py  from_analysis.py  insight_enhancer.py  narrative_generator.py  powerbi_style.py  quick_generator.py  ranker.py  report_generator.py
backend/llm/: __init__.py  context_builder.py  conversation.py  ollama_client.py  prompts.py
backend/tests/: test_analysis.py  test_parser.py
