[project]
name = "smart-report-insights"
version = "1.0.0"
description = "High-performance report insights engine with Quick Insights, Report Insights, and Conversational Analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    
    # Data Processing (High Performance)
    "polars>=0.20.0",
    "numpy>=1.26.0",
    "numba>=0.59.0",
    
    # Statistical Analysis
    "scipy>=1.12.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.4.0",
    
    # Explainability
    "shap>=0.44.0",
    
    # LLM (Ollama)
    "httpx>=0.26.0",
    
    # Validation & Settings
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Utilities
    "python-dateutil>=2.8.0",
    "chardet>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "memory-profiler>=0.61.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
